--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -431,7 +431,7 @@
                     <fieldset>
                       <span class="help-block" data-i18n="[html]settings#egress-region#help-text">
                         Psiphon has servers in many different countries. For the fastest connection
-                        speed you should choose <strong>"Best Performance"</strong>,
+                        speed you should choose <strong>“Fastest Country”</strong>,
                         but you may instead prefer to use a server in a specific country.
                       </span>
                       <span class="help-block">
@@ -455,7 +455,7 @@
                             <li data-region="BEST">
                                 <a tabindex="-1" href="#" class="flag unknown">
                                   <strong data-i18n="settings#egress-region#select-best-performance">
-                                    Best Performance
+                                    Fastest Country
                                   </strong>
                                 </a>
                             </li>
@@ -1081,7 +1081,7 @@
             <span data-i18n="[html]settings#egress-region#error-modal-body-http">
               You have configured Psiphon to use a server in a specific region.<br>
               However, that region is no longer available.<br>
-              You must choose a new region or change to the default "Best Performance" choice.
+              You must choose a new region or change to the default “Fastest Country” choice.
             </span>
           </p>
         </div>
