--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -341,8 +341,8 @@
                   <span data-i18n="settings#systray-minimize#heading">
                     Minimize to Notification Area (System Tray)
                   </span>
-                  <i class="accordion-expand-icon icon-chevron-down-square ie7Remove"
-                     data-icon-closed="icon-chevron-down-square" data-icon-opened="icon-chevron-up-square"></i>
+                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                 </a>
               </div>
               <div id="settings-accordion-systray-minimize" class="accordion-body collapse">
@@ -375,8 +375,8 @@
                   <span data-i18n="settings#split-tunnel#heading">
                     Split Tunnel
                   </span>
-                  <i class="accordion-expand-icon icon-chevron-down-square ie7Remove"
-                     data-icon-closed="icon-chevron-down-square" data-icon-opened="icon-chevron-up-square"></i>
+                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-prohibited"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
@@ -417,8 +417,8 @@
                   <span data-i18n="settings#egress-region#heading">
                     Psiphon Server Region
                   </span>
-                  <i class="accordion-expand-icon icon-chevron-down-square ie7Remove"
-                     data-icon-closed="icon-chevron-down-square" data-icon-opened="icon-chevron-up-square"></i>
+                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-prohibited"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
@@ -511,8 +511,8 @@
                   <span data-i18n="settings#local-proxy-ports#heading">
                     Local Proxy Ports
                   </span>
-                  <i class="accordion-expand-icon icon-chevron-down-square ie7Remove"
-                     data-icon-closed="icon-chevron-down-square" data-icon-opened="icon-chevron-up-square"></i>
+                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-prohibited"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
@@ -571,8 +571,8 @@
                   <span data-i18n="settings#upstream-proxy#heading">
                     Upstream Proxy
                   </span>
-                  <i class="accordion-expand-icon icon-chevron-down-square ie7Remove"
-                     data-icon-closed="icon-chevron-down-square" data-icon-opened="icon-chevron-up-square"></i>
+                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                 </a>
               </div>
               <div id="settings-accordion-upstream-proxy" class="accordion-body collapse">
@@ -634,8 +634,8 @@
                   <span data-i18n="settings#transport-mode#heading">
                     Transport Mode
                   </span>
-                  <i class="accordion-expand-icon icon-chevron-down-square ie7Remove"
-                     data-icon-closed="icon-chevron-down-square" data-icon-opened="icon-chevron-up-square"></i>
+                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                 </a>
               </div>
               <div id="settings-accordion-transport-mode" class="accordion-body collapse">
