Renamed 'VPN mode' to 'L2TP/IPSec mode' to help avoid confusion

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -379,7 +379,7 @@
                      data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-prohibited"></i>
-                    <span data-i18n="settings#vpn-incompatible-label">VPN</span>
+                    <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
                   </span>
                 </a>
               </div>
@@ -401,7 +401,7 @@
                       </div>
                       <span class="help-block">
                         <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
-                          (Doesn't work with VPN mode.)
+                          (Doesn't work with L2TP/IPSec mode.)
                         </small>
                       </span>
                     </fieldset>
@@ -421,7 +421,7 @@
                      data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-prohibited"></i>
-                    <span data-i18n="settings#vpn-incompatible-label">VPN</span>
+                    <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
                   </span>
                 </a>
               </div>
@@ -436,7 +436,7 @@
                       </span>
                       <span class="help-block">
                         <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
-                          (Doesn't work with VPN mode.)
+                          (Doesn't work with L2TP/IPSec mode.)
                         </small>
                       </span>
                       <span class="help-block egress-region-invalid">
@@ -515,7 +515,7 @@
                      data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-prohibited"></i>
-                    <span data-i18n="settings#vpn-incompatible-label">VPN</span>
+                    <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
                   </span>
                 </a>
               </div>
@@ -554,7 +554,7 @@
                         </span>
                         <span class="help-block">
                           <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
-                            (Doesn't work with VPN mode.)
+                            (Doesn't work with L2TP/IPSec mode.)
                           </small>
                         </span>
                       </div>
@@ -646,14 +646,15 @@
                         <input type="checkbox" id="VPN"/>
                         <label for="VPN">
                           <span data-i18n="settings#transport-mode#check-label">
-                            Use VPN Mode
+                            Use L2TP/IPSec Mode
                           </span>
                         </label>
                       </div>
                       <span class="help-block" data-i18n="[html]settings#transport-mode#help-text">
-                        Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it
-                        doesn't provide obfuscation. It is <strong>not recommended</strong>
-                        for bypassing most firewalls.
+                        Uses Windows L2TP/IPSec virtual networking. This mode
+                        will tunnel all of your apps, but it doesn't provide
+                        obfuscation. It is <strong>not recommended</strong> for
+                        bypassing most firewalls.
                       </span>
                     </fieldset>
                   </form>
