--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -11583,11 +11583,6 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
 /* To avoid CSS expressions while still supporting IE 7 and IE 6, use this script */
 /* The script tag referencing this file must be placed before the ending body tag. */
 
-/* Use conditional comments in order to target IE 7 and older:
-	<!--[if lt IE 8]><!-->
-	<script src="ie7/ie7.js"></script>
-	<!--<![endif]-->
-*/
 
 (function() {
 	function addIcon(el, entity) {
@@ -15866,14 +15861,16 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
 
         <!-- ABOUT ======================================================-->
         <div class="tab-pane fade" id="about-pane">
-          <div class="wordart">
-            <div class="wordart-title text-center" data-i18n="about#wordart-title">
-              Psiphon
+          <a class="InfoURL" href="#">
+            <div class="wordart">
+              <div class="wordart-title text-center" data-i18n="about#wordart-title">
+                Psiphon
+              </div>
+              <div class="wordart-tag text-center" data-i18n="about#wordart-tag">
+                Beyond Borders
+              </div>
             </div>
-            <div class="wordart-tag text-center" data-i18n="about#wordart-tag">
-              Beyond Borders
-            </div>
-          </div>
+          </a>
 
           <p data-i18n="[html]about#description">
             Psiphon is a <strong>censorship circumvention tool</strong> — it is
