--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -802,14 +802,16 @@
 
         <!-- ABOUT ======================================================-->
         <div class="tab-pane fade" id="about-pane">
-          <div class="wordart">
-            <div class="wordart-title text-center" data-i18n="about#wordart-title">
-              Psiphon
+          <a class="InfoURL" href="#">
+            <div class="wordart">
+              <div class="wordart-title text-center" data-i18n="about#wordart-title">
+                Psiphon
+              </div>
+              <div class="wordart-tag text-center" data-i18n="about#wordart-tag">
+                Beyond Borders
+              </div>
             </div>
-            <div class="wordart-tag text-center" data-i18n="about#wordart-tag">
-              Beyond Borders
-            </div>
-          </div>
+          </a>
 
           <p data-i18n="[html]about#description">
             Psiphon is a <strong>censorship circumvention tool</strong> — it is
