Added some space in wordart above and below underline. Farsi descenders were crossing the line and looked wrong.

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -7452,10 +7452,12 @@ body[dir="rtl"] #language-pane .language-item {
   border-bottom-width: 3px;
   border-bottom-style: solid;
   text-shadow: 3px 3px #D9D2BE;
+  padding-bottom: 0.15em;
 }
 .wordart .wordart-tag {
   font-size: 1.4em;
   color: #381E15;
+  padding-top: 0.1em;
 }
 /* MISCELLANEOUS AND HELPERS */
 .global-alert {
