--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -820,9 +820,9 @@
             Toronto, Canada.
           </p>
           <p data-i18n="[html]about#visit-download-site">
-            To <strong>download a new version</strong> of Psiphon, or to
-            <strong>get help and more information</strong>, please
-            <a class="InfoURL" href="#">visit the website</a>.
+            Please visit the website to
+            <strong><a class="NewVersionURL" href="#">download a new version</a></strong>
+            or to get <strong><a class="InfoURL" href="#">help and information</a></strong>.
           </p>
           <p>
             <span data-i18n="[html]about#get-by-email">
